fix tile aligning on tag page

--- a/app/assets/stylesheets/tile/tile_thumbnail/_tiles_thumbnails.css.scss
+++ b/app/assets/stylesheets/tile/tile_thumbnail/_tiles_thumbnails.css.scss
@@ -15,7 +15,7 @@
 }
 
 .tile_thumbnail {
-  // display: inline-block;
+  display: inline-block;
   // float: left;
   text-align:center;
   min-width: 140px;
